--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,4 +1,6 @@
 ---
+import { classes } from "../shared/classes";
+
 export interface Job {
   period: string;
   company: string;
@@ -15,22 +17,25 @@ const { records } = Astro.props;
 ---
 
 <section class="mb-5">
-  <h2 class="text-xl text-gray-300 border-b border-gray-700 mb-5">
-    Experience
-  </h2>
+  <h2 class={classes.h2}>Experience</h2>
   {
     records.map(({ period, company, title, tools, description }) => (
       <div class="mb-5">
-        <p class="text-gray-400 mb-5">
-          <strong>{period}</strong>
-        </p>
-        <h3 class="text-lg text-gray-200 mb-5">{company}</h3>
-        <p class="text-gray-400 mb-5">
-          <em>{title}</em>
-        </p>
-        <p class="text-gray-400 mb-5" set:html={description} />
+        <p class="mb-3">{period}</p>
+        <h3
+          class={
+            classes.h3 +
+            " !text-lg !text-slate-100 print:!text-slate-950 !font-bold mb-5"
+          }
+        >
+          {company} <br />
+          <small class="font-normal text-slate-500">
+            <em>{title}</em>
+          </small>
+        </h3>
+        <p class="mb-5" set:html={description} />
         {tools && (
-          <p class="text-[#39f]">
+          <p class="text-blue-400">
             <small>{tools}</small>
           </p>
         )}
