--- a/src/components/TechStack.astro
+++ b/src/components/TechStack.astro
@@ -1,4 +1,6 @@
 ---
+import { classes } from "../shared/classes";
+
 interface Stack {
   title: string;
   items: string[];
@@ -11,24 +13,31 @@ interface Props {
 const { records } = Astro.props;
 ---
 
-<section class="mb-5">
-  <h2 class="text-xl text-gray-300 border-b border-gray-700 mb-5">
-    Tech Stack
-  </h2>
-  {
-    records.map((category) => (
-      <article class="flex items-center mb-5">
-        <h3 class="text-lg text-gray-200 mb-5 relative flex-1 after:content-[' '] after:top-2.5 after:w-full after:h-px after:bg-[#39f] after:absolute after:opacity-15 after:z-[-1] after:flex-1 after:shadow-[1em_0_5px_#181818,1.5em_0_15px_#181818]">
-          {category.title}
-        </h3>
-        <ul class="flex justify-end gap-2 flex-wrap px-2 list-none z-100">
-          {category.items.map((item) => (
-            <li class="border-2 border-[#39f] text-[#39f] py-1 px-2 rounded-md whitespace-nowrap">
-              {item}
-            </li>
-          ))}
-        </ul>
-      </article>
-    ))
-  }
+<section class="mb-10">
+  <h2 class={classes.h2}>Tech Stack</h2>
+  <ul class="print:inline">
+    {
+      records.map(({ title, items }) => (
+        <li>
+          <article class="md:grid print:inline-block print:m-0 print:p-0 grid-cols-6 group cursor-default ml-4 p-3 hover:bg-slate-900 border-l border-transparent hover:border-slate-800 transition-all rounded-lg">
+            <h3
+              class={
+                classes.h3 +
+                " opacity-75 group-hover:opacity-100 lg:text-right mr-5 relative top-2 print:text-left"
+              }
+            >
+              {title}
+            </h3>
+            <ul class="col-span-5 flex print:inline mt-3 place-items-start justify-start gap-2 flex-wrap list-none z-100">
+              {items.map((item) => (
+                <li class="print:inline-block print:border-transparent print:after:content-[',_'] print:text-slate-800 border border-slate-800 group-hover:border-blue-400/50 group-hover:text-blue-300 text-blue-400/70 transition-colors py-1 px-2 rounded-md whitespace-nowrap">
+                  {item}
+                </li>
+              ))}
+            </ul>
+          </article>
+        </li>
+      ))
+    }
+  </ul>
 </section>
