--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -5,6 +5,7 @@ interface School {
   period: string;
   institution: string;
   degree: string;
+  place: string;
 }
 
 interface Props {
@@ -16,17 +17,20 @@ const { records } = Astro.props;
 
 <section class="mb-5">
   <h2 class={classes.h2}>Education</h2>
-  {
-    records.map(({ period, institution, degree }) => (
-      <div class="mb-5">
-        <p class="text-gray-400 mb-5">
-          <strong>{period}</strong>
-        </p>
-        <h3 class="text-lg text-gray-200 mb-5">{institution}</h3>
-        <p class="text-gray-400 mb-5">
-          <strong>{degree}</strong>
-        </p>
-      </div>
-    ))
-  }
+  <ol class={"md:grid grid-cols-3 pl-8 gap-8" + classes.marker} reversed>
+    {
+      records.map(({ period, institution, degree, place }) => (
+        <li class="mb-5">
+          <p class="mb-3">{period}</p>
+          <h3 class={classes.h3}>
+            {institution} <br />
+            <small class="font-normal text-slate-500">
+              <em>{place}</em>
+            </small>
+          </h3>
+          <p class="mb-5" set:html={degree} />
+        </li>
+      ))
+    }
+  </ol>
 </section>
