--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,22 +1,25 @@
 ---
+import { Languages } from ".";
 import { classes } from "../shared/classes";
 
 interface Header {
   name: string;
   title: string;
   description: string[];
+  languages: Parameters<typeof Languages>[0];
 }
 
 type Props = Header;
-const { name, title, description } = Astro.props;
+const { name, title, description, languages } = Astro.props;
 ---
 
-<header class="text-base leading-relaxed sm:pt-8 mb-10">
+<header class="leading-relaxed sm:pt-8 mb-10 mt-16 print:m-0 print:p-0">
   <h1 class={classes.h1}>
     {name}
     <br />
     <small class="text-slate-500">{title}</small>
   </h1>
+
   <div class="max-w-4xl">
     {
       description.map((para) => (
@@ -30,4 +33,5 @@ const { name, title, description } = Astro.props;
       ))
     }
   </div>
+  <Languages {...languages} />
 </header>
