--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -67,7 +67,7 @@ const {
     class="bg-slate-950 dark:bg-slate-100 transition-colors print:bg-white print:text-slate-900 print:text-sm text-base text-slate-400 leading-relaxed antialiased"
   >
     <div
-      class="print:hidden dark:invert fixed h-10 w-16 flex items-center justify-center top-10 right-10 z-50 bg-slate-950/60 dark:bg-slate-950/95 dark:ring-1 backdrop-blur-sm rounded-full"
+      class="print:hidden dark:invert fixed h-10 w-16 flex items-center justify-center top-5 right-5 sm:top-10 sm:right-10 z-50 bg-slate-950/60 dark:bg-slate-950/95 dark:ring-1 backdrop-blur-sm rounded-full"
     >
       <Toggle client:only="react" />
     </div>
