--- a/src/components/Languages.astro
+++ b/src/components/Languages.astro
@@ -10,11 +10,16 @@ const { records } = Astro.props;
 
 I speak:
 <ul
-  class="inline-flex mt-3 ml-2 place-items-start justify-start gap-3 flex-wrap list-none z-100 col-span-5 mb-5"
+  class="grid grid-cols-2 sm:inline-flex mt-3 md:ml-2 sm:place-items-start justify-start gap-3 flex-wrap list-none z-100 mb-5"
 >
   {
     records.map(({ name, level }) => (
-      <li class={classes.pill + " text-slate-300/75 pr-1 border-opacity-75"}>
+      <li
+        class={
+          classes.pill +
+          " text-slate-300/75 pr-1 border-opacity-75 flex justify-between"
+        }
+      >
         {name}
         <span class="text-blue-200/80 inline-block bg-slate-800 print:bg-transparent print:text-slate-900 ml-1 px-2 rounded-sm">
           {level}
