--- a/src/components/TechStack.astro
+++ b/src/components/TechStack.astro
@@ -22,12 +22,12 @@ const { records } = Astro.props;
           <h3
             class={
               classes.h3 +
-              " text-sm !text-slate-400/50 group-hover:!text-slate-100 transition-color lg:text-right mr-5 relative md:top-5 print:text-left"
+              " text-sm !text-slate-400/50 mt-3 mb-0 group-hover:!text-slate-100 transition-color lg:text-right mr-5 relative md:top-5 print:text-left"
             }
           >
             {title}
           </h3>
-          <ul class="col-span-5 flex print:inline mt-3 p-3 place-items-start justify-start gap-3 flex-wrap list-none z-100 group-hover:bg-slate-900 border-l border-transparent group-hover:border-slate-800 transition-all rounded-lg">
+          <ul class="col-span-5 flex print:inline mt-3 p-3 place-items-start justify-start gap-3 flex-wrap list-none z-100 group-hover:bg-slate-900 border-l border-slate-800/65 md:border-transparent group-hover:border-slate-800 transition-all rounded-lg">
             {items.map((title) => (
               <li class="print:inline-block print:border-transparent print:after:content-[',_'] print:text-slate-800 border border-slate-800 group-hover:border-blue-400/50 group-hover:text-blue-300 text-blue-400/75 transition-colors py-1 px-2 rounded-md whitespace-nowrap">
                 {title}
