--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -8,7 +8,7 @@ interface Props {
 const { records } = Astro.props;
 
 const itemClasses =
-  "mb-1 p-4 print:p-0 rounded-lg flex items-center justify-start print:block text-slate-300 bg-slate-900 hover:bg-slate-900/70 hover:text-blue-300 transition-colors print:bg-transparent print:text-slate-700";
+  "mb-1 p-4 print:p-0 rounded-lg flex items-center justify-start print:block text-slate-300 bg-slate-900/50 hover:bg-slate-900/95 ring-1 ring-slate-800/60 hover:text-blue-300 transition-colors print:bg-transparent print:text-slate-700";
 ---
 
 <address>
