--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -27,7 +27,7 @@ const { records } = Astro.props;
       records.map(({ period, company, title, tools, description, details }) => (
         <li
           class={
-            "mb-5 group print:mb-0 print:pb-0 print:bg-transparent bg-slate-900/60 hover:bg-slate-900 hover:scale-[1.01] px-5 pt-3 pb-5 rounded-lg transition-all" +
+            "mb-5 group print:mb-0 print:pb-0 print:bg-transparent bg-slate-900/60 hover:bg-slate-900/50 hover:scale-[1.01] px-5 pt-3 pb-5 rounded-lg transition-all" +
             classes.leftBorder
           }
         >
