Fix inverted mode

--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -66,7 +66,7 @@ const {
     <title>Jan Mirecki – Frontend Developer</title>
   </head>
   <body
-    class="bg-slate-950 bg-gradient-to-tr from-slate-950 to-indigo-700/10 bg-fixed dark:bg-slate-100 transition-colors print:bg-none print:bg-white print:text-slate-900 print:text-sm text-base text-slate-400 leading-relaxed antialiased"
+    class="bg-slate-950 bg-gradient-to-tr from-slate-950 to-indigo-700/10 bg-fixed dark:bg-slate-100 dark:from-slate-100 dark:to-indigo-200/10 transition-colors print:bg-none print:bg-white print:text-slate-900 print:text-sm text-base text-slate-400 leading-relaxed antialiased"
   >
     <div
       class="print:hidden dark:invert fixed h-10 w-16 flex items-center justify-center top-5 right-5 sm:top-10 sm:right-10 z-50 bg-slate-950/60 dark:bg-slate-950/95 dark:ring-1 backdrop-blur-sm rounded-full"
