--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -90,6 +90,6 @@ const {
       <p class="mb-3">Reach out to me at:</p>
       <Contact {...contact} />
     </footer>
-    <Scripts gtagId="G-GKB5E87E47" />
+    <Scripts gtagId="G-GKB5E87E47" enableLenis />
   </body>
 </html>
