Fix language level display on mobile

--- a/src/components/Languages.astro
+++ b/src/components/Languages.astro
@@ -21,7 +21,7 @@ I speak:
         }
       >
         {name}
-        <span class="text-blue-200/80 inline-block bg-slate-800 print:bg-transparent print:text-slate-900 ml-1 px-2 rounded-sm">
+        <span class="text-blue-200/80 relative shadow-black drop-shadow-md truncate hover:overflow-visible hover:whitespace-normal hover:z-10 inline-block bg-slate-800 print:bg-transparent print:text-slate-900 ml-1 px-2 rounded-sm">
           {level}
         </span>
       </li>
