Update README with project details and restructure MarkDown layout

--- a/src/layouts/MarkDown.astro
+++ b/src/layouts/MarkDown.astro
@@ -30,9 +30,9 @@ import { Scripts } from "../components";
         >🖨️ print or save as pdf
       </a>
     </div>
-    <div class="print:pt-0 pt-32">
+    <main class="print:pt-0 pt-32">
       <slot />
-    </div>
+    </main>
     <Scripts.GA gtagId="G-GKB5E87E47" />
   </body>
 </html>
